@@ -471,7 +471,7 @@ class RndBtree<T extends IPersistent> extends PersistentCollection<T> implements
         }
 
         Object getKeyValue(int i) { 
-            return new Short(data[i]);
+            return Short.valueOf(data[i]);
         }
 
         BtreePage clonePage() { 
